--- a/Class 2.5
+++ b/Class 2.5
@@ -9,4 +9,5 @@ If a separate vision and scope document is available, refer to it rather than du
 <Summarize the major functions the product must perform or must let the user perform.
 Details will be provided in Section 3, so only a high level summary (such as a bullet list) is needed here. 
 Organize the functions to make them understandable to any reader of the SRS. 
-A picture of the major groups of related requirements and how they relate, such as a top level data flow diagram or object class diagram, is often effective.>
+A picture of the major groups of related requirements and how they relate, such as a top level data flow diagram or object class diagram,
+is often effective.>
