--- a/Class 2.5
+++ b/Class 2.5
@@ -1,8 +1,7 @@
 1.4 Product Scope
-<Provide a short description of the software being specified and its purpose, including relevant benefits, objectives, and goals.
-Relate the software to corporate goals or business strategies. 
-If a separate vision and scope document is available, refer to it rather than duplicating its contents here.
-
+<Our project is a computer game inspired the mechanics of orgeon trail. 
+A time travel adventure based on the users choices will ientertain and spark curiousity. 
+The project will not be fore sale
 
 
 2.2 Product Functions
