--- a/Class 2.5
+++ b/Class 2.5
@@ -5,8 +5,6 @@ The project will not be fore sale
 
 
 2.2 Product Functions
-<Summarize the major functions the product must perform or must let the user perform.
-Details will be provided in Section 3, so only a high level summary (such as a bullet list) is needed here. 
-Organize the functions to make them understandable to any reader of the SRS. 
-A picture of the major groups of related requirements and how they relate, such as a top level data flow diagram or object class diagram,
-is often effective.>
+<fighting thing, beat enenemies, get items, tell stories, entertain, farming, enemey terriorty, Elizabethan, today, 
+mid to late apocalypse, reward system, two generic androgynous avatar choices to choose from, focus is story line, 
+theme continues to change and different ending, recognizable characters 
